--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <title>MyTODO</title>
   </head>
   <body>
-    <div id="app"></div>
+    <section class="taskapp"></section>
     <script type="module">
       // https://rustwasm.github.io/docs/wasm-bindgen/examples/without-a-bundler.html
       import init from '/pkg/package.js';
