--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>MyTODO</title>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <section class="taskapp"></section>
+
+    <footer class="info">
+        <p>Double-click to edit a todo</p>
+        <p>Created by <a href="https://kavik.cz">Martin Kavík</a></p>
+        <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    </footer>
+
     <script type="module">
       // https://rustwasm.github.io/docs/wasm-bindgen/examples/without-a-bundler.html
       import init from '/pkg/package.js';
